syntax = "proto3";

option java_multiple_files = false;
// 生成java类所在包
option java_package = "com.webbdong.springboot.grpc";

package protobuf;

service TestService {
  // 简单一次性GRPC调用
  rpc get_msg (MsgRequest) returns (MsgResponse) {}
  // 服务端流
  rpc get_msg_server_stream (MsgRequest) returns (stream MsgResponse) {}
  // 客户端流
  rpc get_msg_client_stream (stream MsgRequest) returns (MsgResponse) {}
  // 双向流
  rpc get_msg_two_way_stream (stream MsgRequest) returns (stream MsgResponse) {}
}

message MsgRequest {
  string name = 1;
}

message MsgResponse {
  string code = 1;
  string data = 2;
  string msg = 3;
}